--- a/.github/workflows/deploy-prefect-flow.yaml
+++ b/.github/workflows/deploy-prefect-flow.yaml
@@ -45,7 +45,7 @@ jobs:
         run: |
           # 创建临时Dockerfile用于部署
           cat > Dockerfile.deploy << EOF
-          FROM python:3.12-slim
+          FROM registry.cn-beijing.aliyuncs.com/moseeker/python:3.12-slim
           WORKDIR /app
           COPY flow.py /app/
           COPY requirements.txt /app/
