--- a/.github/workflows/deploy-prefect-flow.yaml
+++ b/.github/workflows/deploy-prefect-flow.yaml
@@ -49,7 +49,7 @@ jobs:
           WORKDIR /app
           COPY flow.py /app/
           COPY requirements.txt /app/
-          RUN pip install -r requirements.txt
+          RUN pip install -r requirements.txt -i https://mirrors.aliyun.com/pypi/simple/ --trusted-host mirrors.aliyun.com
           ENV PREFECT_API_URL=${{ secrets.PREFECT_API_URL }}
           ENV IMAGE_REPO=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           ENV IMAGE_TAG=${{ steps.version.outputs.VERSION }}
